--- a/MOO_Application.ipynb
+++ b/MOO_Application.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,6 +445,98 @@
    "source": [
     "<div>In this example, the objective function <code>objective</code> has been called *n_start + n_iter* times. </div>\n",
     "We can see that the obtained front is close from the one obtained without using surrogates. You can now play with the function to optimize <code>objective</code>, the bounds <code>xlimits</code>, but also the parameters of MOO itself. For example, when defining the MOO object, you can declare <code>surrogate =</code> to choose a different modelization kernel or <code>criterion =</code> for a different activation function in the model's refining loop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Method comparition\n",
+    "\n",
+    "One of the crucial points of bayesian optimization is the way the points are selected to improve the surrogate model. Here, we will compare the efficiency of the different methods available thanks to SMT so far. The reference will be given by a run of NSGA2 directly on the objective function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "log() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-342672d94b68>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[0mres_exact\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mminimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproblem_exact\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mNSGA2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpop_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"n_gen\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m \u001b[0mmoga\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjective\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" %s seconds for genetic research criterion\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\bayesian-optim\\smt\\applications\\MOO.py\u001b[0m in \u001b[0;36moptimize\u001b[1;34m(self, fun)\u001b[0m\n\u001b[0;32m     89\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"n_iter\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 91\u001b[1;33m             \u001b[1;31m# find next best x-coord point to evaluate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     92\u001b[0m             \u001b[0mnew_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_find_best_point\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m             \u001b[0mnew_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnew_x\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: log() takes 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "from smt.applications.ego import EGO\n",
+    "from smt.sampling_methods import LHS\n",
+    "import time\n",
+    "\n",
+    "ndim =2\n",
+    "fun1 = Rosenbrock(ndim=ndim)\n",
+    "fun2 = Branin(ndim=ndim)\n",
+    "xlimits = np.array([[-2.0,2.0], [-2.0,2.0]])\n",
+    "ndoe = 10 \n",
+    "n_iter = 15\n",
+    "points = 250 #values of alpha for the scalarized problem\n",
+    "sampling = LHS(xlimits=xlimits)\n",
+    "xdoe = sampling(ndoe)\n",
+    "f1res,f2res = [],[]\n",
+    "alphas = np.linspace(0,1,points)\n",
+    "start_time = time.time()\n",
+    "\n",
+    "#setup\n",
+    "ego = EGO(n_iter=n_iter, criterion='EI', xdoe=xdoe, xlimits=xlimits)\n",
+    "class MyProblem_reel(Problem):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(n_var=2,n_obj=2,n_constr=0,xl=np.array([-2.0, -2.0]),xu=np.array([2.0, 2.0]),elementwise_evaluation=True)\n",
+    "    def _evaluate(self, x, out, *args, **kwargs):\n",
+    "        xx = np.asarray(x).reshape(1, -1) #le modèle prend un array en entrée\n",
+    "        f1 = fun1(xx)[0][0]\n",
+    "        f2 = fun2(xx)[0][0]\n",
+    "        out[\"F\"] = [f1, f2]\n",
+    "problem_exact = MyProblem_reel()\n",
+    "moga = MOO(n_iter = 15,criterion = \"GA\", n_start = 15, xlimits = xlimits, n_gen=30, pop_size = 30)\n",
+    "mopi = MOO(n_iter = 15,criterion = \"PI\", n_start = 15, xlimits = xlimits, n_gen=30, pop_size = 30)\n",
+    "\n",
+    "# run\n",
+    "plots_ = []\n",
+    "res_exact = minimize(problem_exact,NSGA2(pop_size=100),(\"n_gen\", 100),verbose=False)\n",
+    "start_time = time.time()\n",
+    "moga.optimize(objective)\n",
+    "print(\" %s seconds for genetic research criterion\" % (time.time() - start_time))\n",
+    "start_time = time.time()\n",
+    "mopi.optimize(objective)\n",
+    "print(\" %s seconds for PI criterion\" % (time.time() - start_time))\n",
+    "start_time = time.time()\n",
+    "for alp in alphas:    \n",
+    "    def objective1D(x, alpha=alp):\n",
+    "        return alpha*fun1(x) + (1-alpha)*fun2(x)\n",
+    "    x_opt, y_opt, ind_best, x_data, y_data = ego.optimize(objective1D)\n",
+    "    f1res.append(fun1(np.asarray([x_opt]))[0][0])\n",
+    "    f2res.append(fun2(np.asarray([x_opt]))[0][0])\n",
+    "print(\" %s seconds for 250 points for the scalarized function\" % (time.time() - start_time))\n",
+    "\n",
+    "#plots\n",
+    "plots_.append( np.array(moga.result.F[:]) )\n",
+    "plots_.append( np.array(mopi.result.F[:]) )\n",
+    "plots_.append( np.array(res_exact.F[:]) )\n",
+    "plt.scatter(plots_[0][:,0], plots_[0][:,1], c = \"green\", label = \"GA\")\n",
+    "plt.xlabel(\"f1 = Rosenbrock\")\n",
+    "plt.ylabel(\"f2 = Branin\")\n",
+    "plt.scatter(plots_[1][:,0], plots_[1][:,1], c = \"red\", label = \"PI\")\n",
+    "plt.scatter(plots_[2][:,0], plots_[2][:,1], c = \"blue\", label = \"True\")\n",
+    "plt.scatter(f1res, f2res, c = \"black\", label = \"scalarization\")\n",
+    "plt.title(\"Methods comparation, niter = nstart = 15\")\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
